--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -16,24 +16,24 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="permlab_bluetoothShareManager" msgid="311492132450338925">"Accesați managerul de descărcare."</string>
+    <string name="permlab_bluetoothShareManager" msgid="311492132450338925">"Accesează managerul de descărcare."</string>
     <string name="permdesc_bluetoothShareManager" msgid="8930572979123190223">"Permite aplicațiilor să acceseze managerul Distribuire prin Bluetooth și să-l utilizeze la transferul fișierelor."</string>
-    <string name="permlab_bluetoothAcceptlist" msgid="2647575807648622053">"Acceptați accesul la dispozitivul Bluetooth."</string>
+    <string name="permlab_bluetoothAcceptlist" msgid="2647575807648622053">"Acceptă accesul la dispozitivul Bluetooth."</string>
     <string name="permdesc_bluetoothAcceptlist" msgid="2406423665674766442">"Permite aplicației să accepte temporar un dispozitiv Bluetooth, permițându-i să trimită fișiere pe acest dispozitiv fără confirmare din partea utilizatorului."</string>
     <string name="bt_share_picker_label" msgid="6268100924487046932">"Bluetooth"</string>
     <string name="unknown_device" msgid="9221903979877041009">"Dispozitiv necunoscut"</string>
     <string name="unknownNumber" msgid="4994750948072751566">"Necunoscut"</string>
     <string name="airplane_error_title" msgid="2683839635115739939">"Mod Avion"</string>
-    <string name="airplane_error_msg" msgid="8698965595254137230">"Nu puteți utiliza Bluetooth în modul Avion."</string>
+    <string name="airplane_error_msg" msgid="8698965595254137230">"Nu poți folosi Bluetooth în modul Avion."</string>
     <string name="bt_enable_title" msgid="8657832550503456572"></string>
-    <string name="bt_enable_line1" msgid="7203551583048149">"Pentru a putea utiliza serviciile Bluetooth, trebuie mai întâi să le activați."</string>
-    <string name="bt_enable_line2" msgid="4341936569415937994">"Activați acum Bluetooth?"</string>
-    <string name="bt_enable_cancel" msgid="1988832367505151727">"Anulați"</string>
-    <string name="bt_enable_ok" msgid="3432462749994538265">"Activați"</string>
+    <string name="bt_enable_line1" msgid="7203551583048149">"Pentru a putea folosi serviciile Bluetooth, trebuie mai întâi să le activezi."</string>
+    <string name="bt_enable_line2" msgid="4341936569415937994">"Activezi acum Bluetooth?"</string>
+    <string name="bt_enable_cancel" msgid="1988832367505151727">"Anulează"</string>
+    <string name="bt_enable_ok" msgid="3432462749994538265">"Activează"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"Transfer de fișier"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Acceptați fișierul primit?"</string>
-    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Refuzați"</string>
-    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Acceptați"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Accepți fișierul primit?"</string>
+    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Refuză"</string>
+    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Acceptă"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"OK"</string>
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"A fost atins timpul limită pentru acceptarea unui fișier primit de la „<xliff:g id="SENDER">%1$s</xliff:g>”"</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Fișier primit"</string>
@@ -51,8 +51,8 @@
     <string name="download_line3" msgid="4384821622908676061">"Dimensiunea fișierului: <xliff:g id="SIZE">%1$s</xliff:g>"</string>
     <string name="download_line4" msgid="8535996869722666525"></string>
     <string name="download_line5" msgid="3069560415845295386">"Se primește fișierul..."</string>
-    <string name="download_cancel" msgid="9177305996747500768">"Opriți"</string>
-    <string name="download_ok" msgid="5000360731674466039">"Ascundeți"</string>
+    <string name="download_cancel" msgid="9177305996747500768">"Oprește"</string>
+    <string name="download_ok" msgid="5000360731674466039">"Ascunde"</string>
     <string name="incoming_line1" msgid="2127419875681087545">"De la"</string>
     <string name="incoming_line2" msgid="3348994249285315873">"Numele fișierului"</string>
     <string name="incoming_line3" msgid="7954237069667474024">"Dimensiunea"</string>
@@ -61,7 +61,7 @@
     <string name="download_fail_line3" msgid="3451040656154861722">"Motiv: <xliff:g id="REASON">%1$s</xliff:g>"</string>
     <string name="download_fail_ok" msgid="1521733664438320300">"OK"</string>
     <string name="download_succ_line5" msgid="4509944688281573595">"Fișier primit"</string>
-    <string name="download_succ_ok" msgid="7053688246357050216">"Deschideți"</string>
+    <string name="download_succ_ok" msgid="7053688246357050216">"Deschide"</string>
     <string name="upload_line1" msgid="2055952074059709052">"Către: „<xliff:g id="RECIPIENT">%1$s</xliff:g>”"</string>
     <string name="upload_line3" msgid="4920689672457037437">"Tip de fișier: <xliff:g id="TYPE">%1$s</xliff:g> (<xliff:g id="SIZE">%2$s</xliff:g>)"</string>
     <string name="upload_line5" msgid="7759322537674229752">"Se trimite fișierul..."</string>
@@ -69,24 +69,24 @@
     <string name="upload_succ_ok" msgid="7705428476405478828">"OK"</string>
     <string name="upload_fail_line1" msgid="7899394672421491701">"Fișierul nu a fost trimis la „<xliff:g id="RECIPIENT">%1$s</xliff:g>”."</string>
     <string name="upload_fail_line1_2" msgid="2108129204050841798">"Fișier: <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="upload_fail_cancel" msgid="9118496285835687125">"Închideți"</string>
+    <string name="upload_fail_cancel" msgid="9118496285835687125">"Închide"</string>
     <string name="bt_error_btn_ok" msgid="5965151173011534240">"OK"</string>
     <string name="unknown_file" msgid="6092727753965095366">"Fișier necunoscut"</string>
     <string name="unknown_file_desc" msgid="480434281415453287">"Nu există nicio aplicație care să gestioneze acest tip de fișier. \n"</string>
     <string name="not_exist_file" msgid="3489434189599716133">"Niciun fișier"</string>
     <string name="not_exist_file_desc" msgid="4059531573790529229">"Fișierul nu există. \n"</string>
-    <string name="enabling_progress_title" msgid="436157952334723406">"Așteptați..."</string>
+    <string name="enabling_progress_title" msgid="436157952334723406">"Așteaptă..."</string>
     <string name="enabling_progress_content" msgid="4601542238119927904">"Se activează Bluetooth..."</string>
-    <string name="bt_toast_1" msgid="972182708034353383">"Se va primi fișierul. Verificați progresul în panoul de notificări."</string>
+    <string name="bt_toast_1" msgid="972182708034353383">"Se va primi fișierul. Verifică progresul în panoul de notificări."</string>
     <string name="bt_toast_2" msgid="8602553334099066582">"Fișierul nu poate fi primit."</string>
     <string name="bt_toast_3" msgid="6707884165086862518">"Primirea fișierului de la „<xliff:g id="SENDER">%1$s</xliff:g>” a fost anulată"</string>
     <string name="bt_toast_4" msgid="4678812947604395649">"Se trimite fișierul către „<xliff:g id="RECIPIENT">%1$s</xliff:g>”"</string>
-    <string name="bt_toast_5" msgid="2846870992823019494">"Se trimit <xliff:g id="NUMBER">%1$s</xliff:g>   fișiere către „<xliff:g id="RECIPIENT">%2$s</xliff:g>”"</string>
+    <string name="bt_toast_5" msgid="2846870992823019494">"Se trimit <xliff:g id="NUMBER">%1$s</xliff:g> fișiere către „<xliff:g id="RECIPIENT">%2$s</xliff:g>”"</string>
     <string name="bt_toast_6" msgid="1855266596936622458">"Trimiterea fișierului către „<xliff:g id="RECIPIENT">%1$s</xliff:g>” a fost anulată"</string>
     <string name="bt_sm_2_1_nosdcard" msgid="5354343190503952837">"Nu există suficient spațiu de stocare USB pentru a salva fișierul."</string>
     <string name="bt_sm_2_1_default" msgid="2497541206648973852">"Nu există spațiu suficient pe cardul SD pentru a salva fișierul."</string>
     <string name="bt_sm_2_2" msgid="2965243265852680543">"Spațiu necesar: <xliff:g id="SIZE">%1$s</xliff:g>"</string>
-    <string name="ErrorTooManyRequests" msgid="8578277541472944529">"Există prea multe solicitări în curs de procesare. Încercați din nou mai târziu."</string>
+    <string name="ErrorTooManyRequests" msgid="8578277541472944529">"Există prea multe solicitări în curs de procesare. Încearcă din nou mai târziu."</string>
     <string name="status_pending" msgid="2503691772030877944">"Transferul fișierului nu a început încă."</string>
     <string name="status_running" msgid="6562808920311008696">"Transferul fișierului este în curs de desfășurare."</string>
     <string name="status_success" msgid="239573225847565868">"Transferul fișierului s-a încheiat."</string>
@@ -95,7 +95,7 @@
     <string name="status_canceled" msgid="6664490318773098285">"Transfer anulat de către utilizator."</string>
     <string name="status_file_error" msgid="3671917770630165299">"Problemă de stocare."</string>
     <string name="status_no_sd_card_nosdcard" msgid="573631036356922221">"Nu există spațiu de stocare USB."</string>
-    <string name="status_no_sd_card_default" msgid="396564893716701954">"Nu există card SD. Introduceți un card SD pentru a salva fișierele transferate."</string>
+    <string name="status_no_sd_card_default" msgid="396564893716701954">"Nu există card SD. Introdu un card SD pentru a salva fișierele transferate."</string>
     <string name="status_connection_error" msgid="947681831523219891">"Conectare eșuată."</string>
     <string name="status_protocol_error" msgid="3245444473429269539">"Solicitarea nu poate fi gestionată corect."</string>
     <string name="status_unknown_error" msgid="8156660554237824912">"Eroare necunoscută."</string>
@@ -119,14 +119,14 @@
       <item quantity="other"><xliff:g id="SUCCESSFUL_NUMBER_1">%1$d</xliff:g> de fișiere transferate, %2$s</item>
       <item quantity="one"><xliff:g id="SUCCESSFUL_NUMBER_0">%1$d</xliff:g> fișier transferat, %2$s</item>
     </plurals>
-    <string name="transfer_menu_clear_all" msgid="790017462957873132">"Ștergeți lista"</string>
-    <string name="transfer_menu_open" msgid="3368984869083107200">"Deschideți"</string>
-    <string name="transfer_menu_clear" msgid="5854038118831427492">"Ștergeți din listă"</string>
-    <string name="transfer_clear_dlg_title" msgid="2953444575556460386">"Ștergeți"</string>
+    <string name="transfer_menu_clear_all" msgid="790017462957873132">"Șterge lista"</string>
+    <string name="transfer_menu_open" msgid="3368984869083107200">"Deschide"</string>
+    <string name="transfer_menu_clear" msgid="5854038118831427492">"Șterge din listă"</string>
+    <string name="transfer_clear_dlg_title" msgid="2953444575556460386">"Șterge"</string>
     <string name="bluetooth_a2dp_sink_queue_name" msgid="6864149958708669766">"Now Playing"</string>
-    <string name="bluetooth_map_settings_save" msgid="7635491847388074606">"Salvați"</string>
-    <string name="bluetooth_map_settings_cancel" msgid="9205350798049865699">"Anulați"</string>
-    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"Selectați conturile la care doriți să permiteți accesul prin Bluetooth. Va trebui să acceptați accesul la conturi la conectare."</string>
+    <string name="bluetooth_map_settings_save" msgid="7635491847388074606">"Salvează"</string>
+    <string name="bluetooth_map_settings_cancel" msgid="9205350798049865699">"Anulează"</string>
+    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"Selectează conturile la care vrei să permiți accesul prin Bluetooth. Va trebui să accepți accesul la conturi la conectare."</string>
     <string name="bluetooth_map_settings_count" msgid="4557473074937024833">"Sloturi rămase:"</string>
     <string name="bluetooth_map_settings_app_icon" msgid="7105805610929114707">"Pictograma aplicației"</string>
     <string name="bluetooth_map_settings_title" msgid="7420332483392851321">"Setări de permitere a accesului la mesajele prin Bluetooth"</string>
@@ -135,5 +135,5 @@
     <string name="bluetooth_disconnected" msgid="3318303728981478873">"Audio prin Bluetooth deconectat"</string>
     <string name="a2dp_sink_mbs_label" msgid="7566075853395412558">"Audio prin Bluetooth"</string>
     <string name="bluetooth_opp_file_limit_exceeded" msgid="8894450394309084519">"Fișierele mai mari de 4 GB nu pot fi transferate"</string>
-    <string name="bluetooth_connect_action" msgid="4009848433321657090">"Conectați-vă la Bluetooth"</string>
+    <string name="bluetooth_connect_action" msgid="4009848433321657090">"Conectează-te la Bluetooth"</string>
 </resources>
