--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -77,7 +77,7 @@
     <string name="not_exist_file_desc" msgid="4059531573790529229">"ఫైల్ ఉనికిలో లేదు. \n"</string>
     <string name="enabling_progress_title" msgid="436157952334723406">"దయచేసి వేచి ఉండండి..."</string>
     <string name="enabling_progress_content" msgid="4601542238119927904">"బ్లూటూత్‌ను ప్రారంభిస్తోంది…"</string>
-    <string name="bt_toast_1" msgid="972182708034353383">"ఫైల్ స్వీకరించబడుతుంది. నోటిఫికేషన్‌ల ప్యానెల్‌లో ప్రోగ్రెస్‌ను తనిఖీ చేయండి."</string>
+    <string name="bt_toast_1" msgid="972182708034353383">"ఫైల్ స్వీకరించబడుతుంది. నోటిఫికేషన్‌ల ప్యానెల్‌లో ప్రోగ్రెస్‌ను చెక్ చేయండి."</string>
     <string name="bt_toast_2" msgid="8602553334099066582">"ఫైల్ స్వీకరించబడలేదు."</string>
     <string name="bt_toast_3" msgid="6707884165086862518">"\"<xliff:g id="SENDER">%1$s</xliff:g>\" పంపిన ఫైల్‌ను స్వీకరించడం ఆపివేయబడింది"</string>
     <string name="bt_toast_4" msgid="4678812947604395649">"ఫైల్‌ను \"<xliff:g id="RECIPIENT">%1$s</xliff:g>\"కి పంపుతోంది"</string>
@@ -117,10 +117,10 @@
       <item quantity="other"><xliff:g id="SUCCESSFUL_NUMBER_1">%1$d</xliff:g> విజయవంతం, %2$s</item>
       <item quantity="one"><xliff:g id="SUCCESSFUL_NUMBER_0">%1$d</xliff:g> విజయవంతం, %2$s</item>
     </plurals>
-    <string name="transfer_menu_clear_all" msgid="790017462957873132">"లిస్ట్‌ను క్లియర్ చేయి"</string>
+    <string name="transfer_menu_clear_all" msgid="790017462957873132">"లిస్ట్‌ను క్లియర్ చేయండి"</string>
     <string name="transfer_menu_open" msgid="3368984869083107200">"తెరువు"</string>
-    <string name="transfer_menu_clear" msgid="5854038118831427492">"లిస్ట్‌ నుండి క్లియర్ చేయి"</string>
-    <string name="transfer_clear_dlg_title" msgid="2953444575556460386">"క్లియర్ చేయి"</string>
+    <string name="transfer_menu_clear" msgid="5854038118831427492">"లిస్ట్‌ నుండి క్లియర్ చేయండి"</string>
+    <string name="transfer_clear_dlg_title" msgid="2953444575556460386">"క్లియర్ చేయండి"</string>
     <string name="bluetooth_a2dp_sink_queue_name" msgid="6864149958708669766">"ప్రస్తుతం ప్లే అవుతున్నవి"</string>
     <string name="bluetooth_map_settings_save" msgid="7635491847388074606">"సేవ్ చేయి"</string>
     <string name="bluetooth_map_settings_cancel" msgid="9205350798049865699">"రద్దు చేయి"</string>
